--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -28,10 +28,7 @@ env:
   TF_VERSION: 1.6.6
 
 jobs:
-
-  # -------------------------
-  # PLAN JOB (auto on push)
-  # -------------------------
+  # PLAN
   terraform-plan:
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
@@ -64,15 +61,13 @@ jobs:
       - name: Terraform Plan
         run: terraform plan -var-file="terraform.tfvars"
 
+  # APPLY 
 
-  # -------------------------
-  # APPLY JOB (approval only here)
-  # -------------------------
   terraform-apply:
     if: github.event_name == 'push'
     needs: terraform-plan
     runs-on: ubuntu-latest
-    environment: production   # 🔥 Approval gate here
+    environment: production 
 
     steps:
       - name: Checkout
@@ -97,9 +92,13 @@ jobs:
         run: terraform apply -auto-approve -var-file="terraform.tfvars"
 
 
-  # -------------------------
-  # DESTROY (manual only)
-  # -------------------------
+
+
+
+
+        
+  # DESTROY
+
   terraform-destroy:
     if: github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'destroy'
     runs-on: ubuntu-latest
